tests/errors/too-few-args.ink
~ a(1)

== function a(arg1, arg2)
~ return arg1 + arg2
